--- a/index.html
+++ b/index.html
@@ -339,6 +339,17 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">JavaScript</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                                    <span>30%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
                               <h3 style="font-weight: 500;">Robot Operating System/Gazebo/Rviz</h3>
                               <div class="progress">
                                  <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
@@ -388,17 +399,6 @@
                                  <div class="progress-bar color-3" role="progressbar" aria-valuenow="80"
                                     aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span>80%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Word/Excel/PowerPoint</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                    <span>70%</span>
                                  </div>
                               </div>
                            </div>
