--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                            <div class="progress-wrap">
                               <strong>
 <!--                                 <a href="https://www.hackerearth.com/@somawatvinay">-->
-                                    <p style="color:dimgrey">Mobile: 7355216857</p>
+                                    <p style="color:dimgrey">Mobile: **********</p>
 <!--                                 </a>-->
                               </strong>
                            </div>
