--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ dynamic autosugesstion box in django admin panel.</li>
                               <ul>
                               <li>Email: <a href = "mailto: 1arshanahmad@gmail.com">1arshanahmad@gmail.com</a> </li>
                               <li>Linkdin: <a href = "https://www.linkedin.com/in/41arshan-ahmad/">https://www.linkedin.com/in/41arshan-ahmad/</a> </li>
-                              <li>Mobile: 735521685</li>
+                              <li>Mobile: *********</li>
                               </ul>
                               </p>
 
